# SweePP

./: .gitignore  CMakeLists.txt  README.md
assets/linux/: mkpackage.sh
assets/linux/debpackage/DEBIAN/: control
assets/linux/debpackage/usr/share/applications/: swee++.desktop
assets/mac/: mkbundle.sh
assets/mac/Swee++.app/Contents/: Info.plist
assets/mac/Swee++.app/Contents/Frameworks/: libgcc_s.1.dylib  libjpeg.9.dylib  libpng16.16.dylib  libstdc++.6.dylib  libtiff.5.dylib  libwx_baseu-3.0.0.3.0.dylib
assets/mac/Swee++.app/Contents/Resources/: AppIcon.icns
assets/mac/utils/: dylibbundler
assets/mac/utils/createdmg/: ._README.md
assets/win/: mkinstaller.bat
assets/win/xgettext/lib/: charset.alias
libswee++/: CMakeLists.txt  resources.rc
libswee++/include/: libswee++.h  scoresmanager.h
libswee++/include/game/: cell.h  field.h
libswee++/src/: scoresmanager.cpp
libswee++/src/game/: cell.cpp  field.cpp
locales/de/: swee++.po
locales/ja/: swee++.po
locales/pl/: swee++.po
locales/ru/: swee++.po
swee++/: CMakeLists.txt  resources.rc  swee++.xpm
swee++/include/: App.h  ColorScheme.h  GamePresets.h  wx_pch.h
swee++/include/frames/: GameSettingsDialog.h  MainFrame.h  ScoresDialog.h
swee++/src/: App.cpp
swee++/src/frames/: GameSettingsDialog.cpp  MainFrame.cpp  ScoresDialog.cpp
